--- a/page2.html
+++ b/page2.html
@@ -59,5 +59,8 @@
                 <li>Content & Layout of this Website (This section)</li>
             </ul>
         </div>
+        <div class="reviewlink" id="reviewbutton">
+            <p><a class="linkbutton" id="reviewbutton2" href="review.html">Review</a></p>
+        </div>
     </body>
 </html> 
