--- a/review.html
+++ b/review.html
@@ -9,9 +9,15 @@
             <p id="linkbar"><a class="linkbutton" href="page1.html">Page 1</a><a class="linkbutton" id="innerbar" href="page2.html">Page 2</a><a class="linkbutton" href="aboutme.html">About Me</a></p>
         </div>
         <div class="toptext">
-            <h2></h2>
-            <p></p>
-            </ul>
+            <h2>Review the ongoing use of IT tools and change approach as needed</h2>
+            <p>I have no complaints to make about the software used to actually write the code required (Visual Studio Code), it did exactly what was needed of it and more, with the autocomplete feature in particular proving exceptionally useful.</p>
+            <p>On that point, GitHub also works as expected, though the method of keeping it updated is somewhat arcane, and I needed to keep looking it up every time I pushed an update to it after not doing so for a few hours.</p>
+            <p>While I can see the use Trello has for projects of substantial scope, or those completed by a group, in a solo project this narrow/short, it didn’t really save any more time or make work more efficient than it would have been without it as far as I can tell. This project was a very linear step to step process without much to forget or that could potentially fall by the wayside, and no coordination with others was required, making it not particularly useful.</p>
+        </div>
+        <div>
+            <h2>Describe whether the IT tools selected were appropriate</h2>
+            <p>Again, Visual Studio Code was the highlight here, and is easily better than similar software I’ve used to write HTML in the past (Though admittedly it isn’t that hard to be better than Notepad or Notepad++)</p>
+            <p>GitHub seems somewhat redundant for a task of this scale, similar to Trello as described earlier. In a group project, or a larger project, it definitely has a useful place, but the same goal could have been achieved in this context with less effort by sending zip files over Slack, or some similar method of direct transfer.</p>
         </div>
     </body>
 </html> 
